#992 Fix alignment buttons by removing fixed width

--- a/server/http-dashboard/app/components/Widgets/components/SwitchWidget/styles.less
+++ b/server/http-dashboard/app/components/Widgets/components/SwitchWidget/styles.less
@@ -2,7 +2,6 @@
 
 .modal-window-widget-settings-config--switch-text-alignment {
   label {
-    width: 69px;
     text-align: center;
   }
 }
